dodanie przeliczania wybranej waluty na szereg walut z API NBP